Update the GetVM endpoint to return all available information from the VMware API
